Fix crash in webseed downloading code

BUG: 232971

svn path=/trunk/extragear/network/ktorrent/; revision=1110536